--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chatbot for Class</title>
+    <title>MSTU-4005 Test Chatbot</title>
+    <style>
+        #banner {
+            background-color: #f8f9fa;
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
+    <div id="banner">MSTU-4005 Test Chatbot</div>
     <iframe src='https://www.stack-ai.com/embed/8e5e9224-8cb7-4322-8996-0d1af8f70250/81bc5f4e-a454-4989-ab12-f2bc90e49257/64baf3d8389eba99cc6f416b' width="100%" height="800px" style="display: block; position: relative; border: none; overflow: hidden; z-index: 9999999999; background-color: transparent; border-radius: 10px; width: 100%; height: 800px; top: 0; left: 50%; transform: translateX(-50%);"></iframe>
 </body>
 </html>
