--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
             font-size: 24px;
             font-weight: bold;
             font-family: Arial, sans-serif;
+            margin-bottom: 0;
         }
         #subtext {
             text-align: center;
             font-size: 16px;
             font-family: Arial, sans-serif;
+            margin-top: 0;
         }
     </style>
 </head>
